--- a/less/index.less
+++ b/less/index.less
@@ -2,6 +2,11 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
 }
+
+//variables
+@mobile: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 800px)";
+
 body {
     margin: 0;
     padding: 0;
@@ -68,13 +73,29 @@ body {
         justify-content: space-around;
         align-items: center;
 
+        @media @tablet {
+            flex-direction: column;
+            text-align: center;
+            padding-bottom: 2rem;
+        }
+
             .intro-img {
                 width: 40%;
+                @media @tablet {
+                    width: 100%;
+                }
             }
             
             .intro-img img{
                 width: 100%;
                 margin: 2rem;
+
+                @media @tablet {
+                    width: 75%;
+                }
+                @media @mobile {
+                    display:none;
+                }
             }
             .intro-text {
                 display: flex;
@@ -82,6 +103,13 @@ body {
                 justify-content: space-between;
                 width: 40%;
                 padding: 2% 4% 2% 2%;
+
+                @media @tablet {
+                    width: 75%;
+                    padding: 0;
+                    margin: 0;
+                    text-align: left;
+                }
 
                 h2 {
                     font-size: 1.9rem;
@@ -114,12 +142,21 @@ body {
             display: flex;
             width: 100%;
             justify-content: space-around;
+             @media @mobile {
+                 flex-direction: column;
+                 align-items: center;
+             }
         
             .sign-up-col {
                 width: 50%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+
+                @media @mobile {
+                    width: 75%;
+                    margin-bottom: 2rem;
+                }
 
                 h3 {
                     text-decoration: underline;
@@ -128,10 +165,15 @@ body {
                 .step-box {
                     width: 50%;
                     text-align: center;
+                    margin-bottom: 2rem;
                 }
             }
             .bori {
                 border-right: 1px solid black;
+
+                @media @mobile {
+                    border-right: none;
+                }
             }
             .sign-me-up {
                 width: 48%;
@@ -140,6 +182,10 @@ body {
                 border: none;
                 color: white;
                 font-size: 1.3rem;
+
+                @media @mobile {
+                    width: 85%;
+                }
             }
         }
     }
@@ -165,6 +211,11 @@ body {
             color: white;
             font-size: 1.3rem;
             margin: 0;
+
+            @media @mobile {
+                height: 3rem;
+                font-size: 1rem;
+            }
         }
     }
 
@@ -178,6 +229,14 @@ body {
 
         img {
             padding: 1rem;
+
+            @media @tablet {
+                width: 3rem;
+            }
+
+            @media @mobile {
+                width: 2rem;
+            }
         }
     }
 }
