--- a/less/index.less
+++ b/less/index.less
@@ -45,12 +45,24 @@ body {
         .nav-links {
             display: flex;
             justify-content: space-around;
+            height: 100%;
             align-items: center;
             width: 50%;
+
             a {
                 text-decoration: none;
                 color: white;
                 font-size: 1rem;
+                align-items: center;
+                width: 33%;
+                text-align: center;
+
+                &:hover {
+                    background-color: white;
+                    color: black;
+                    padding: 1.5rem 0;
+                    font-weight: 400;
+                }
             }
         }
     }
