--- a/css/index.css
+++ b/css/index.css
@@ -57,8 +57,8 @@ body {
   padding: 1.5rem 0;
   font-weight: 400;
 }
-.container .jumbo {
-  max-width: 1150px;
+.container section {
+  width: 100%;
 }
 .container .jumbo img {
   width: 100%;
@@ -67,7 +67,6 @@ body {
 .container .intro {
   background-color: black;
   width: 100%;
-  max-width: 1150px;
   color: white;
   display: flex;
   justify-content: space-around;
@@ -107,7 +106,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   width: 40%;
-  padding: 2% 4% 2% 2%;
+  height: 100%;
+  margin: 1rem;
 }
 @media (max-width: 800px) {
   .container .intro .intro-text {
@@ -130,6 +130,11 @@ body {
   border: none;
   color: white;
   font-size: 1.3rem;
+}
+@media (max-width: 500px) {
+  .container .intro .intro-text .sign-me-up {
+    width: 100%;
+  }
 }
 .container .sign-up {
   display: flex;
@@ -164,6 +169,16 @@ body {
 }
 .container .sign-up .sign-up-content .sign-up-col h3 {
   text-decoration: underline;
+}
+@media (max-width: 500px) {
+  .container .sign-up .sign-up-content .sign-up-col h3 {
+    color: white;
+    background-color: black;
+    width: 100%;
+    height: 2rem;
+    text-align: center;
+    padding-top: 0.75rem;
+  }
 }
 .container .sign-up .sign-up-content .sign-up-col .step-box {
   width: 50%;
@@ -239,13 +254,16 @@ body {
 }
 .container .forms-container {
   width: 100%;
+  height: 100vh;
   display: flex;
+  align-items: center;
   margin: 0 auto;
   text-align: center;
 }
 @media (max-width: 500px) {
   .container .forms-container {
     flex-direction: column;
+    height: auto;
   }
 }
 .container .forms-container .form-col {
