--- a/less/index.less
+++ b/less/index.less
@@ -67,9 +67,13 @@ body {
         }
     }
 
+    section {
+        width: 100%;
+    }
+
     .jumbo {
        
-        max-width: 1150px;
+        // max-width: 1150px;
         img {    
           width:100%;    
           margin-bottom: -20px; 
@@ -79,7 +83,6 @@ body {
     .intro {
         background-color: black;
         width: 100%;
-        max-width: 1150px;
         color: white;
         display: flex;
         justify-content: space-around;
@@ -114,7 +117,8 @@ body {
                 flex-direction: column;
                 justify-content: space-between;
                 width: 40%;
-                padding: 2% 4% 2% 2%;
+                height: 100%;
+                margin: 1rem;
 
                 @media @tablet {
                     width: 75%;
@@ -138,6 +142,11 @@ body {
                     border: none;
                     color: white;
                     font-size: 1.3rem;
+
+                    @media @mobile {
+                        width: 100%;
+                        
+                    }
                 }
             }
     }
@@ -172,6 +181,14 @@ body {
 
                 h3 {
                     text-decoration: underline;
+                    @media @mobile {
+                        color: white;
+                        background-color: black;
+                        width: 100%;
+                        height: 2rem;
+                        text-align: center;
+                        padding-top: 0.75rem ;
+                    }
                 }
 
                 .step-box {
@@ -254,12 +271,15 @@ body {
 
     .forms-container {
         width: 100%;
+        height: 100vh;
         display: flex;
+        align-items: center;
         margin: 0 auto;
         text-align: center;
 
         @media @mobile {
             flex-direction: column;
+            height: auto;
         }
 
         .form-col{
