--- a/less/index.less
+++ b/less/index.less
@@ -10,10 +10,11 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 .container {
-    width : 99vw;
+    width : 100%;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -72,7 +73,7 @@ body {
     }
 
     .jumbo {
-       
+       width: 100%;
         // max-width: 1150px;
         img {    
           width:100%;    
@@ -157,6 +158,7 @@ body {
         align-items: center;
         width: 100%;
         max-width: 1150px;
+        margin: 0 auto;
         margin-bottom: 3rem;
         
         .sign-up-content {
@@ -168,8 +170,9 @@ body {
                  align-items: center;
              }
         
+
             .sign-up-col {
-                width: 50%;
+                width: 48%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -204,17 +207,18 @@ body {
                     border-right: none;
                 }
             }
-            .sign-me-up {
-                width: 48%;
-                background-color: #2ECC71;
-                height: 2.3rem;
-                border: none;
-                color: white;
-                font-size: 1.3rem;
+        }
+        .sign-me-up {
+            width: 48%;
+            background-color: #2ECC71;
+            height: 2.3rem;
+            border: none;
+            color: white;
+            font-size: 1.3rem;
+            margin-top: 2rem;
 
-                @media @mobile {
-                    width: 85%;
-                }
+            @media @mobile {
+                width: 85%;
             }
         }
     }
@@ -224,10 +228,10 @@ body {
 
     .browse-businesses {
         margin: 0;
-        width: 100vw;
+        width: 100%;
         max-width: 1150px;
         img {
-            width: 100vw;
+            width: 100%;
             max-width:1150px;
             margin-bottom: -10px;
         }    
