--- a/less/index.less
+++ b/less/index.less
@@ -28,12 +28,17 @@ body {
         justify-content: space-around;;
         background-color: black;
         color: white;
+        position: fixed;
+        top: 0;
         width: 100%;
+        padding: 0.75rem 0;
+       
     
         .nav-header {
             display: flex;
             align-items: center;
-            width: 40%;
+            width: 50%;
+            margin-left: 2rem;
             img{
                 margin:0 1rem;
                 width:3.8rem;
@@ -46,7 +51,6 @@ body {
         .nav-links {
             display: flex;
             justify-content: space-around;
-            height: 100%;
             align-items: center;
             width: 50%;
 
@@ -55,14 +59,24 @@ body {
                 color: white;
                 font-size: 1rem;
                 align-items: center;
-                width: 33%;
+                // width: 33%;
                 text-align: center;
 
-                &:hover {
-                    background-color: white;
-                    color: black;
-                    padding: 1.5rem 0;
-                    font-weight: 400;
+               &.active {
+                   font-size: 1.5rem;;
+               }
+
+                img {
+                    width: 20px;
+                    height: 20px;
+                    margin: 0;
+                    padding: 0;
+                    margin-right:1rem; 
+
+                    &.active {
+                        width: 1.5em;
+                        height:1.5rem;
+                    }
                 }
             }
         }
@@ -76,7 +90,8 @@ body {
        width: 100%;
         // max-width: 1150px;
         img {    
-          width:100%;    
+          width:100%;  
+          padding-top: 92px;  
           margin-bottom: -20px; 
         }    
     }
