--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,17 @@ body {
   margin-bottom: 3rem;
   border-bottom: 1px solid black;
 }
+.container .sign-up .sign-up-header h2 {
+  font-size: 5rem;
+  width: 80%;
+  margin: 4rem auto;
+}
+@media (max-width: 800px) {
+  .container .sign-up .sign-up-header h2 {
+    font-size: 3rem;
+    text-align: center;
+  }
+}
 .container .sign-up .sign-up-content {
   display: flex;
   width: 100%;
@@ -185,7 +196,12 @@ body {
   }
 }
 .container .sign-up .sign-up-content .sign-up-col h3 {
-  text-decoration: underline;
+  font-size: 3rem;
+  border-bottom: 2px dashed black;
+  width: 50%;
+  padding: 1rem;
+  text-align: center;
+  margin-top: 0;
 }
 @media (max-width: 500px) {
   .container .sign-up .sign-up-content .sign-up-col h3 {
@@ -194,13 +210,30 @@ body {
     width: 100%;
     height: 2rem;
     text-align: center;
-    padding-top: 0.75rem;
+    padding: 0.75rem;
+  }
+}
+@media (max-width: 800px), (max-width: 500px) {
+  .container .sign-up .sign-up-content .sign-up-col h3 {
+    font-size: 2rem;
   }
 }
 .container .sign-up .sign-up-content .sign-up-col .step-box {
   width: 50%;
+  height: 250px;
   text-align: center;
   margin-bottom: 2rem;
+  border: 1px solid black;
+  padding: 2rem 1rem;
+}
+@media (max-width: 500px), (max-width: 800px) {
+  .container .sign-up .sign-up-content .sign-up-col .step-box {
+    width: 75%;
+    height: 250px;
+  }
+}
+.container .sign-up .sign-up-content .sign-up-col .step-box p {
+  font-size: 1.4rem;
 }
 .container .sign-up .sign-up-content .bori {
   border-right: 1px solid black;
@@ -210,16 +243,20 @@ body {
     border-right: none;
   }
 }
+.container .sign-up a {
+  width: 100%;
+  text-align: center;
+}
 .container .sign-up .sign-me-up {
-  width: 48%;
+  width: 100%;
   background-color: #2ECC71;
-  height: 2.3rem;
+  height: 4rem;
   border: none;
   color: white;
   font-size: 1.3rem;
   margin: 2rem 0;
 }
-@media (max-width: 500px) {
+@media (max-width: 500px), (max-width: 800px) {
   .container .sign-up .sign-me-up {
     width: 85%;
   }
