--- a/less/index.less
+++ b/less/index.less
@@ -175,6 +175,18 @@ body {
         max-width: 1150px;
         margin: 0 auto;
         margin-bottom: 3rem;
+
+        .sign-up-header {
+            h2 {
+                font-size: 5rem;
+                width: 80%;
+                margin: 4rem auto;
+                @media @tablet {
+                    font-size: 3rem;
+                    text-align: center;
+                }
+            }
+        }
         
         .sign-up-content {
             display: flex;
@@ -198,21 +210,41 @@ body {
                 }
 
                 h3 {
-                    text-decoration: underline;
+                    font-size: 3rem;
+                    border-bottom: 2px dashed black;
+                    width: 50%;
+                    padding: 1rem;
+                    text-align: center;
+                    margin-top: 0;
                     @media @mobile {
                         color: white;
                         background-color: black;
                         width: 100%;
                         height: 2rem;
                         text-align: center;
-                        padding-top: 0.75rem ;
+                        padding: 0.75rem ;                       
+                    }
+                    @media @tablet, @mobile {
+                        font-size: 2rem;
                     }
                 }
 
                 .step-box {
                     width: 50%;
+                    height: 250px;
                     text-align: center;
                     margin-bottom: 2rem;
+                    border: 1px solid black;
+                    padding: 2rem 1rem;
+
+                    @media @mobile, @tablet{
+                        width: 75%;
+                        height: 250px;
+                    }
+
+                    p {
+                        font-size: 1.4rem;
+                    }
                 }
             }
             .bori {
@@ -223,16 +255,20 @@ body {
                 }
             }
         }
+        a {
+            width: 100%;
+            text-align: center;
+        }
         .sign-me-up {
-            width: 48%;
+            width: 100%;
             background-color: #2ECC71;
-            height: 2.3rem;
+            height: 4rem;
             border: none;
             color: white;
             font-size: 1.3rem;
             margin: 2rem 0;
 
-            @media @mobile {
+            @media @mobile, @tablet {
                 width: 85%;
             }
         }
