--- a/less/index.less
+++ b/less/index.less
@@ -50,7 +50,7 @@ body {
         }
         .nav-links {
             display: flex;
-            justify-content: space-around;
+            justify-content: flex-end;
             align-items: center;
             width: 50%;
 
@@ -58,8 +58,8 @@ body {
                 text-decoration: none;
                 color: white;
                 font-size: 1rem;
+                padding: 1rem;
                 align-items: center;
-                // width: 33%;
                 text-align: center;
 
                &.active {
@@ -74,7 +74,7 @@ body {
                     margin-right:1rem; 
 
                     &.active {
-                        width: 1.5em;
+                        width: 1.5rem;
                         height:1.5rem;
                     }
                 }
@@ -181,9 +181,9 @@ body {
                 font-size: 5rem;
                 width: 80%;
                 margin: 4rem auto;
+                text-align: center;
                 @media @tablet {
                     font-size: 3rem;
-                    text-align: center;
                 }
             }
         }
@@ -260,7 +260,7 @@ body {
             text-align: center;
         }
         .sign-me-up {
-            width: 100%;
+            width: 78%;
             background-color: #2ECC71;
             height: 4rem;
             border: none;
@@ -269,7 +269,7 @@ body {
             margin: 2rem 0;
 
             @media @mobile, @tablet {
-                width: 85%;
+                width: 91%;
             }
         }
         border-bottom: 1px solid black;
@@ -315,15 +315,46 @@ body {
                 align-items: center;
                 margin-bottom: 2rem;
 
+                @media @tablet {
+                    flex-direction: column;
+                    img {
+                        display: none;
+                    }
+                }
+
                 input, select {
                     margin-left: 1rem;
-                    width: 10rem;
+                    width: 15rem;
                     text-align: center;
+                    border-radius: 5px;
+                    height: 1.8rem;
+                    border: none;
+
+                    @media @tablet {
+                        width: 25rem;
+                        margin-bottom: 2rem;
+                    }
+                }
+
+                button {
+                    margin-left: 1rem;
+
+                }
+                .go {
+                    width: 5rem;
+                    height:2rem;
+                    border-radius: 6px;
+                    background-color: #2ECC71;
+                    color: white;
+                    font-size: 1rem;
+                    border: none;
+                    @media @tablet {
+                        width: 15rem;
+                    }
                 }
             }
 
         }
-
 
         .browse-workers-header {
             margin-bottom: 2rem;
@@ -383,7 +414,6 @@ body {
         .browse {
             background-color: black;
             color: white;
-            width: 50%;
             padding: 1.5rem;
             font-size: 1.3rem;
             margin-bottom: 4rem;
